--- a/inventory/group_vars/leaf/common.yaml
+++ b/inventory/group_vars/leaf/common.yaml
@@ -1,22 +1,2 @@
 ----
-bridge:
-  ports:
-    - "{{ vni10.name }}"
-    - "{{ vni20.name }}"
-    - "{{ vni30.name }}"
-    - "{{ vniRED.name }}"
-    - "{{ vniBLUE.name }}"
-    - "peerlink"
-    - "bond1"
-    - "bond2"
-    - "bond3"
-  vids:
-    - 10
-    - 20
-    - 30
-vlans:
-  - "{{ vlan10 }}"
-  - "{{ vlan20 }}"
-  - "{{ vlan30 }}"
-  - "{{ vlan4001 }}"
-  - "{{ vlan4002 }}"
+vlans: 10
