--- a/main.yaml
+++ b/main.yaml
@@ -15,7 +15,11 @@
       register: xxx
     - name: debug
       debug: msg={{ xxx.stdout }} 
-
+    - name: test mh
+      shell: curl -X 'GET' \ 'https://docs.nvidia.com/nvue_v1/evpn/multihoming?rev=operational' \ -H 'accept: application/json'
+      register: xxx
+    - name: debug
+      debug: msg={{ xxx.stdout }} 
 #{
 #  "bond1": {
 #    "bond": {
